[metadata]
name = femnurbs
description = FEM with Nurbs base functions
author = Carlos Leite
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3

[options]
packages =
    femnurbs
install_requires =
    numpy>=1
python_requires = >=3.6
zip_safe = no
